src/test/deca/context/valid/oracle/if_with_true_in_clause.deca
{
    if(true){
        print("Y");
    }
    if(5==5){
        print("o");
    }
    if(5<=6){
        print("u");
    }
}