src/test/deca/context/invalid/oracle/condition_string.deca
{
    if("gl&hf"){
        print("Hello world !");
    }
}